--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "firebase": "8.10.0",
+    "firebase-admin": "^10.1.0",
     "next": "^12.0.7",
     "node-fetch": "^3.2.3",
     "react": "^17.0.2",
