--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "incremental": true
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "firebase.js"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
