--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,11 @@
     "incremental": true
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "firebase/clientApp.js",
+    "firebase/nodeApp.js"
+  ]
 }
