--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "8.10.0",
     "firebase-admin": "^10.1.0",
     "next": "^12.0.7",
+    "next-seo": "^5.4.0",
     "node-fetch": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
